--- a/about-us.htm
+++ b/about-us.htm
@@ -128,16 +128,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-121828.htm" title="从零开始掌握v2rayng购买全攻略：手把手教你安全上网">从零开始掌握v2rayng购买全攻略：手把手教你安全上网</a></li>
-                        <li class="py-2"><a href="/news/article-126798.htm" title="苹果Shadowrocket终极使用指南：从入门到精通">苹果Shadowrocket终极使用指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-124798.htm" title="V2RayNG 32位全攻略：从零开始掌握高效代理工具">V2RayNG 32位全攻略：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-125464.htm" title="突破网络边界：Shadowrocket深度使用指南与高阶配置技巧">突破网络边界：Shadowrocket深度使用指南与高阶配置技巧</a></li>
-                        <li class="py-2"><a href="/news/article-126134.htm" title="突破网络边界：科学上网APK的深度指南与实战技巧">突破网络边界：科学上网APK的深度指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-123845.htm" title="手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南">手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-121943.htm" title="深度剖析r1d科学上网：解锁全球网络自由的全方位指南">深度剖析r1d科学上网：解锁全球网络自由的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-125143.htm" title="突破网络边界：科学上网代理插件的终极使用手册">突破网络边界：科学上网代理插件的终极使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-128144.htm" title="从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南">从链接到扫码：手把手教你将V2ray配置转为二维码的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
                         <li class="py-2"><a href="/news/article-122572.htm" title="Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾">Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾</a></li>
-                        <li class="py-2"><a href="/news/article-122250.htm" title="突破网络边界：磊科科学上网全攻略与深度体验">突破网络边界：磊科科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-125794.htm" title="热点共享科学上网：解锁网络自由的终极指南与深度解析">热点共享科学上网：解锁网络自由的终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-128830.htm" title="鲨鱼机房科学上网全攻略：解锁全球网络的终极指南">鲨鱼机房科学上网全攻略：解锁全球网络的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-124173.htm" title="突破网络边界：2024年最全面的科学上网终极指南">突破网络边界：2024年最全面的科学上网终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-121828.htm" title="从零开始掌握v2rayng购买全攻略：手把手教你安全上网">从零开始掌握v2rayng购买全攻略：手把手教你安全上网</a></li>
+                        <li class="py-2"><a href="/news/article-123845.htm" title="手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南">手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-126798.htm" title="苹果Shadowrocket终极使用指南：从入门到精通">苹果Shadowrocket终极使用指南：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-123207.htm" title="突破封锁的艺术：Trojan与V2Ray速度优化全攻略">突破封锁的艺术：Trojan与V2Ray速度优化全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -149,7 +149,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
