--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -368,81 +368,6 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank"><b>山水云</b></a>
-                                </div>
-                                <div class="panel-body">
-                                    
-                                    <dl>
-                                        <dt>资费</dt>
-                                                                                <dd>
-                                            <p>
-                                                <label>100G/月-小学：</label> ¥ 4.99/月付。 
-                                                                                                每月100GB云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>200G/月-初中：</label> ¥ 9.99/月付。 
-                                                                                                每月200GB云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>500G/月-高中：</label> ¥ 23.99/月付。 
-                                                                                                每月500GB云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>800G/月-大学：</label> ¥ 39.99/月付。 
-                                                                                                每月800GB云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>不限时间150G：</label> ¥ 30/一次性。 
-                                                                                                150GB不限时间云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>不限时间500G：</label> ¥ 90/一次性。 
-                                                                                                500GB不限时间云传输流量; 
-                                                                                                解锁SS中转高速线路; 
-                                                                                                解锁IEPL专线节点; 
-                                                                                                全流媒体解锁，包含GPT等服务; 
-                                                                                                支持24小时客服响应; 
-                                                                                            </p>
-                                        </dd>
-                                                                            </dl>
-                                </div>
-                                <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank">点击查看</a>
-                                </div>
-                            </div>
-                            <hr />
-                                                        <div class="panel panel-default">
-                                <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="vyGmgr86" target="_blank"><b>木瓜云</b></a>
                                 </div>
                                 <div class="panel-body">
@@ -543,16 +468,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-124798.htm" title="V2RayNG 32位全攻略：从零开始掌握高效代理工具">V2RayNG 32位全攻略：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-122882.htm" title="突破网络限制：Shadowrocket电脑版完整安装与使用指南">突破网络限制：Shadowrocket电脑版完整安装与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-125143.htm" title="突破网络边界：科学上网代理插件的终极使用手册">突破网络边界：科学上网代理插件的终极使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-123845.htm" title="手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南">手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-126798.htm" title="苹果Shadowrocket终极使用指南：从入门到精通">苹果Shadowrocket终极使用指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-128490.htm" title="轻云V2Ray节点完全指南：从入门到精通的安全代理配置">轻云V2Ray节点完全指南：从入门到精通的安全代理配置</a></li>
+                        <li class="py-2"><a href="/news/article-125794.htm" title="热点共享科学上网：解锁网络自由的终极指南与深度解析">热点共享科学上网：解锁网络自由的终极指南与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-126467.htm" title="深度解析：V2RayNG连接无反应的全面诊断与修复指南">深度解析：V2RayNG连接无反应的全面诊断与修复指南</a></li>
-                        <li class="py-2"><a href="/news/article-124173.htm" title="突破网络边界：2024年最全面的科学上网终极指南">突破网络边界：2024年最全面的科学上网终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-121828.htm" title="从零开始掌握v2rayng购买全攻略：手把手教你安全上网">从零开始掌握v2rayng购买全攻略：手把手教你安全上网</a></li>
+                        <li class="py-2"><a href="/news/article-127123.htm" title="突破网络边界：iOS设备上V2Ray的完整配置与使用指南">突破网络边界：iOS设备上V2Ray的完整配置与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-123523.htm" title="突破边界，自由翱翔：启星浏览器科学上网全攻略">突破边界，自由翱翔：启星浏览器科学上网全攻略</a></li>
                         <li class="py-2"><a href="/news/article-121943.htm" title="深度剖析r1d科学上网：解锁全球网络自由的全方位指南">深度剖析r1d科学上网：解锁全球网络自由的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-122572.htm" title="Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾">Quantumult X 与 V2Ray 的完美联姻：打造坚不可摧的隐私防护盾</a></li>
-                        <li class="py-2"><a href="/news/article-124501.htm" title="Chrome科学上网全攻略：从入门到精通的完整指南">Chrome科学上网全攻略：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-126134.htm" title="突破网络边界：科学上网APK的深度指南与实战技巧">突破网络边界：科学上网APK的深度指南与实战技巧</a></li>
                     </ul>
     </div>
 </div>
@@ -564,7 +489,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
